fixed layout problems. removed gallery option.

--- a/css/main.css
+++ b/css/main.css
@@ -9,16 +9,22 @@ body {
 	font-weight: 300;
 	color: #fff;
 }
-
-#flickrStream {
-	text-align: center;
-	padding-top: 100px;
-	margin: auto;
-	max-width: 100%;
-	display: none;
+ 
+.logo {
+  display: block;
+  padding-top: 50px;
+  margin: auto;
+  width: 300px;
 }
 
-.grid-sizer, .grid-item {
+.flickr-stream {
+	padding: 50px 15px 0;
+	max-width: 100%;
+  margin: 0 auto;
+
+}
+
+.grid-item {
 	width: 350px;
 	margin: 5px;
 }
@@ -26,11 +32,10 @@ body {
 .grid-item img {
 	height: 100%;
 	width: 100%;
-  border: 2px solid #111;
 }
 
 .spinner {
-  margin: 25% auto;
+  margin: 5% auto;
   width: 70px;
   text-align: center;
 }
@@ -39,40 +44,14 @@ body {
   width: 18px;
   height: 18px;
   background-color: #fff;
-
   border-radius: 100%;
   display: inline-block;
   -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
   animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
 
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-
-@-webkit-keyframes sk-bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0) }
-  40% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes sk-bouncedelay {
-  0%, 80%, 100% { 
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  } 40% { 
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
-  }
-}
-
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .grid-sizer, .grid-item {
-  	width: 200px;
+  	width: 300px;
   }
 }
